// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render active Item 1`] = `
<button
  class="item active"
>
  <span
    class="icon"
  >
    <span
      aria-label="fa-home"
      class="fa fa-home icon"
    />
  </span>
  <span>
    My House
  </span>
</button>
`;

exports[`Render default Item 1`] = `
<button
  class="item"
>
  <span
    class="icon"
  />
  <span>
    Test Item
  </span>
</button>
`;

exports[`Render disabled Item 1`] = `
<button
  class="item active"
  disabled=""
>
  <span
    class="icon"
  >
    <span
      aria-label="fa-home"
      class="fa fa-home icon"
    />
  </span>
  <span>
    My Item
  </span>
</button>
`;
